<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sub-Divisional Office</string>
    <string name="sub_divisional_office">Sub-Divisional Office</string>
    <string name="hingoli">Hingoli</string>
    <string name="login">Login</string>
    <string name="select_role">Select Role</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="enter_sevarth_id">Enter your Sevarth ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="government_emblem">Government Emblem</string>
    <string name="credit_text">by Stargrid\nSanjivani University</string>
    <string name="sign_up">Sign up</string>
    
    <!-- Sign up strings -->
    <string name="create_admin_account">Fill in the details to create your admin account</string>
    <string name="organization_name">Organization Name</string>
    <string name="admin_first_name">Admin First Name</string>
    <string name="admin_last_name">Admin Last Name</string>
    <string name="sevarth_id">Sevarth ID</string>
    <string name="sevarth_id_note">Your Sevarth ID will be used for login to the system.</string>
    <string name="email_address">Enter your email address</string>
    <string name="contact_number">Contact Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_admin_account">Register Admin Account</string>
    <string name="back_to_login">Back to Login</string>
</resources>